--- a/1-4/HTML/css/smartStyle.css
+++ b/1-4/HTML/css/smartStyle.css
@@ -5,6 +5,7 @@
     .right{width: 200px;}
     .top{width: 200px;}
     .bottom{width: 200px;}
+    .bottom2{width: 125px;}
     .right2{width: 75px;}
     .left2{width: 125px;}
     .top2{width: 125px;}
@@ -15,13 +16,15 @@
     .header{width: 150px;}
     .main{width: 150px;}
     .left{width: 150px;
-          float: none;}
+          float: none;
+          height: 100px;}
     .right{width: 150px;
            float: none;}
     .top{width: 150px;}
     .bottom{width: 150px;}
     .right2{width: 150px;
-            float: none;}
+            float: none;
+             height: 100px;}
     .left2{width: 150px;
            float: none;}
     .top2{width: 150px;}
